--- a/Test.ipynb
+++ b/Test.ipynb
@@ -168,8 +168,8 @@
     "print(len(table_vakancy))\n",
     "print(table_vakancy[1]['name'])\n",
     "\n",
-    "print(table_vakancy[1])\n",
-    "print(table_vakancy[4])\n",
+    "#print(table_vakancy[1])\n",
+    "#print(table_vakancy[4])\n",
     "\n",
     "print(pp)\n",
     "\n",
