--- a/Programming Python/objects and classes.ipynb
+++ b/Programming Python/objects and classes.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -286,9 +286,26 @@
       "Имя: Bill \n",
       "Фамилия: Gates\n",
       "Имя: Leo \n",
-      "Фамилия: Smith,[[7, 10]]\n",
+      "Фамилия: Smith \n",
+      "Среднея оценка за лекции: 8.5\n",
       "Имя: Bill \n",
-      "Фамилия: Gates,[[9, 8, 10]]\n"
+      "Фамилия: Gates \n",
+      "Среднея оценка за лекции: 9.0\n",
+      "Имя: Elene \n",
+      "Фамилия: Bon         \n",
+      "Среднея оценка за домашнее задание: 9.0         \n",
+      "Курсы в процессе изучения: GIT         \n",
+      "Завершенные курсы: basics python\n",
+      "Имя: Alex \n",
+      "Фамилия: Fridman         \n",
+      "Среднея оценка за домашнее задание: 6.0         \n",
+      "Курсы в процессе изучения: Python, GIT         \n",
+      "Завершенные курсы: basics python\n",
+      "Имя: Ruoy \n",
+      "Фамилия: Eman         \n",
+      "Среднея оценка за домашнее задание: 9.166666666666666         \n",
+      "Курсы в процессе изучения: Python, GIT         \n",
+      "Завершенные курсы: basics python\n"
      ]
     }
    ],
@@ -310,6 +327,36 @@
     "                lectur.grades[course] = [grade]\n",
     "        else:\n",
     "            return 'Ошибка'\n",
+    "        \n",
+    "\n",
+    "    def rezult_courses_in_progress(self):\n",
+    "        if len(self.courses_in_progress) == 0:\n",
+    "            rezult = ''\n",
+    "        elif len(self.courses_in_progress) == 1:\n",
+    "            rezult =  self.courses_in_progress[0]\n",
+    "        elif len(self.courses_in_progress) == 2:\n",
+    "            rezult = f'{self.courses_in_progress[0]}, {self.courses_in_progress[1]}'\n",
+    "    \n",
+    "        return rezult\n",
+    "    \n",
+    "    def rezult_finished_courses(self):\n",
+    "        if len(self.finished_courses) == 0:\n",
+    "            rezult = ''\n",
+    "        elif len(self.finished_courses) == 1:\n",
+    "            rezult =  self.finished_courses[0]\n",
+    "        elif len(self.finished_courses) == 2:\n",
+    "            rezult = f'{self.finished_courses[0]}, {self.finished_courses[1]}'\n",
+    "    \n",
+    "        return rezult\n",
+    "\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        rezult = f'Имя: {self.name} \\nФамилия: {self.surname} \\\n",
+    "        \\nСреднея оценка за домашнее задание: {Lecturer.avg_grades(self)} \\\n",
+    "        \\nКурсы в процессе изучения: {self.rezult_courses_in_progress()} \\\n",
+    "        \\nЗавершенные курсы: {self.rezult_finished_courses()}'\n",
+    "        return rezult\n",
+    "\n",
     "\n",
     "\n",
     "class Mentor:\n",
@@ -324,12 +371,19 @@
     "        super().__init__(name,surname)\n",
     "        self.grades = {}\n",
     "    \n",
+    "    def avg_grades(self):\n",
+    "        sum_grades = 0\n",
+    "        count_grades = 0\n",
+    "        for course, grade_list in self.grades.items():\n",
+    "            for grade_number in grade_list:\n",
+    "                sum_grades += grade_number\n",
+    "                count_grades += 1\n",
+    "        avg_grad = sum_grades/count_grades\n",
+    "        return avg_grad\n",
+    "    \n",
+    "    \n",
     "    def __str__(self):\n",
-    "        w =[]\n",
-    "        for x,y in self.grades.items():\n",
-    "            w.append(y)\n",
-    "\n",
-    "        rezult = f'Имя: {self.name} \\nФамилия: {self.surname},{w}'\n",
+    "        rezult = f'Имя: {self.name} \\nФамилия: {self.surname} \\nСреднея оценка за лекции: {self.avg_grades()}'\n",
     "        return rezult\n",
     "\n",
     "\n",
@@ -416,9 +470,14 @@
     "print(Ruoy_Eman.grades)\n",
     "\n",
     "print(reviewer_gates)\n",
+    " \n",
+    "#print(lector_smith.avg_grades())\n",
     "print(lector_smith)\n",
     "print(lector_gates)\n",
-    " \n",
+    "\n",
+    "print(Elene_Bon)\n",
+    "print(Alex_Fridman)\n",
+    "print(Ruoy_Eman)\n",
     "\n",
     " "
    ]
