--- a/Programming Python/objects_and_classes/objects and classes.ipynb
+++ b/Programming Python/objects_and_classes/objects and classes.ipynb
@@ -1049,6 +1049,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Функция №2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
