change find vacancy

--- a/My_Project/Find_vakancy.ipynb
+++ b/My_Project/Find_vakancy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,78 +136,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37872\n",
-      "37856\n",
-      "<class 'dict'>\n",
-      "31\n",
-      "\"name\":\"Аналитик/Аналитик БД\"\n",
-      "<class 'list'>\n",
-      "19\n",
-      "\"name\":\"BI-аналитик / аналитик данных\"\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(end)\n",
-    "print(start)\n",
-    "print(type(spisok_vakancy))\n",
-    "print(len(spisok_vakancy))\n",
-    "print(spisok_vakancy['name'])\n",
+    "#print(end)\n",
+    "#print(start)\n",
+    "#print(type(spisok_vakancy))\n",
+    "#print(len(spisok_vakancy))\n",
+    "#print(spisok_vakancy['name'])\n",
     "\n",
-    "print(type(table_vakancy))\n",
-    "print(len(table_vakancy))\n",
-    "print(table_vakancy[1]['name'])\n",
+    "#print(type(table_vakancy))\n",
+    "#print(len(table_vakancy))\n",
+    "#print(table_vakancy[1]['name'])\n",
     "\n",
     "#print(table_vakancy[1])\n",
     "#print(table_vakancy[4])\n",
-    "\n",
-    "print(pp)\n",
-    "\n",
-    "\n"
+    "#print(pp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_column ():\n",
+    "    for i in range(pp-1):\n",
+    "        table_vakancy[i]['name'] = table_vakancy[i]['name'][7:]\n",
+    "        if table_vakancy[i]['department'] == '\"department\":null':\n",
+    "            table_vakancy[i]['department'] = ' '\n",
+    "        else:\n",
+    "            start = table_vakancy[i]['department'].find('name') + 7\n",
+    "            end = table_vakancy[i]['department'].find('}') - 1\n",
+    "            table_vakancy[i]['department'] = table_vakancy[i]['department'][start:end]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_width():\n",
+    "    column_name = ['name', 'department']\n",
+    "    long_name = []\n",
+    "    for vacancy in column_name:\n",
+    "        for i in range(pp-1):\n",
+    "            long_name.append(len(table_vakancy[i][vacancy]))\n",
+    "\n",
+    "        max_name = max(long_name)\n",
+    "\n",
+    "        for i in range(pp-1):\n",
+    "            sr_name = max_name - len(table_vakancy[i][vacancy])\n",
+    "            table_vakancy[i][vacancy] = table_vakancy[i][vacancy] + (' '*sr_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Аналитик данных / Data Analyst\" ||| null ||| {\"from\":160000,\"to\":200000,\"cur ||| null\n",
-      "\"BI-аналитик / аналитик данных\" ||| null ||| {\"from\":null,\"to\":300000,\"curre ||| null\n",
-      "\"Аналитик данных\" ||| null ||| {\"from\":100000,\"to\":null,\"curre ||| {\"city\":\"Москва\",\"street\":\"Олонецкий проезд\",\"building\":\"4к2\",\"lat\":55.873163,\"lng\":37.66017,\"description\":null,\"raw\":\"Москва, Олонецкий проезд, 4к2\",\"metro\":{\"station_name\":\"Бабушкинская\",\"line_name\":\"Калужско-Рижская\",\"station_id\":\"6.13\",\"line_id\":\"6\",\"lat\":55.870641,\"lng\":37.664341},\"metro_stations\":[{\"station_name\":\"Бабушкинская\",\"line_name\":\"Калужско-Рижская\",\"station_id\":\"6.13\",\"line_id\":\"6\",\"lat\":55.870641,\"lng\":37.664341},{\"station_name\":\"Отрадное\",\"line_name\":\"Серпуховско-Тимирязевская\",\"station_id\":\"9.97\",\"line_id\":\"9\",\"lat\":55.864273,\"lng\":37.605066}],\"id\":\"25114\"}\n",
-      "\"Аналитик\" ||| null ||| {\"from\":160000,\"to\":null,\"curre ||| null\n",
-      "\"Аналитик данных / Data Analyst\" ||| {\"id\":\"3529-3529-lead\",\"name\":\"Сбер. Экспертам и руководителям\"} ||| null ||| null\n",
-      "\"Data Analyst\" ||| null ||| {\"from\":200000,\"to\":350000,\"cur ||| null\n",
-      "\"Аналитик данных\" ||| null ||| {\"from\":60000,\"to\":null,\"curren ||| {\"city\":\"Москва\",\"street\":\"Западный административный округ, Можайский район, Инновационный центр Сколково, Большой бульвар\",\"building\":\"62\",\"lat\":55.683518,\"lng\":37.337505,\"description\":null,\"raw\":\"Москва, Западный административный округ, Можайский район, Инновационный центр Сколково, Большой бульвар, 62\",\"metro\":null,\"metro_stations\":[],\"id\":\"6291764\"}\n",
-      "\"Аналитик\" ||| null ||| {\"from\":50000,\"to\":null,\"curren ||| null\n",
-      "\"Junior Analyst (Аналитик)\" ||| null ||| null ||| null\n",
-      "\"Data Analyst\" ||| null ||| {\"from\":230000,\"to\":null,\"curre ||| null\n",
-      "\"Аналитик данных\" ||| null ||| null ||| {\"city\":\"Москва\",\"street\":\"2-й Щемиловский переулок\",\"building\":\"4Ас4\",\"lat\":55.776178,\"lng\":37.60894,\"description\":null,\"raw\":\"Москва, 2-й Щемиловский переулок, 4Ас4\",\"metro\":null,\"metro_stations\":[],\"id\":\"11754511\"}\n",
-      "\"Аналитик данных\" ||| null ||| null ||| {\"city\":\"Москва\",\"street\":\"Серебряническая набережная\",\"building\":\"29\",\"lat\":55.750504,\"lng\":37.653182,\"description\":null,\"raw\":\"Москва, Серебряническая набережная, 29\",\"metro\":{\"station_name\":\"Курская\",\"line_name\":\"МЦД - 2\",\"station_id\":\"132.726\",\"line_id\":\"132\",\"lat\":55.757622,\"lng\":37.660767},\"metro_stations\":[{\"station_name\":\"Курская\",\"line_name\":\"МЦД - 2\",\"station_id\":\"132.726\",\"line_id\":\"132\",\"lat\":55.757622,\"lng\":37.660767},{\"station_name\":\"Чкаловская\",\"line_name\":\"Люблинско-Дмитровская\",\"station_id\":\"10.72\",\"line_id\":\"10\",\"lat\":55.755951,\"lng\":37.659293}],\"id\":\"3526245\"}\n",
-      "\"Аналитик данных\" ||| null ||| {\"from\":null,\"to\":250000,\"curre ||| null\n",
-      "\"Аналитик данных\" ||| {\"id\":\"ozonru-2180-commerce\",\"name\":\"Ozon Офис и Коммерция\"} ||| null ||| {\"city\":\"Москва\",\"street\":\"Пресненская набережная\",\"building\":\"10\",\"lat\":55.74723295660558,\"lng\":37.536558290665916,\"description\":null,\"raw\":\"Москва, Пресненская набережная, 10\",\"metro\":{\"station_name\":\"Деловой центр\",\"line_name\":\"Большая кольцевая линия\",\"station_id\":\"97.603\",\"line_id\":\"97\",\"lat\":55.7491,\"lng\":37.5395},\"metro_stations\":[{\"station_name\":\"Деловой центр\",\"line_name\":\"Большая кольцевая линия\",\"station_id\":\"97.603\",\"line_id\":\"97\",\"lat\":55.7491,\"lng\":37.5395},{\"station_name\":\"Деловой центр\",\"line_name\":\"Солнцевская\",\"station_id\":\"133.468\",\"line_id\":\"133\",\"lat\":55.7491,\"lng\":37.5395},{\"station_name\":\"Международная\",\"line_name\":\"Филевская\",\"station_id\":\"4.179\",\"line_id\":\"4\",\"lat\":55.748324,\"lng\":37.533282}],\"id\":\"1522426\"}\n",
-      "\"Аналитик данных\" ||| null ||| {\"from\":null,\"to\":120000,\"curre ||| {\"city\":\"Москва\",\"street\":\"Зорге\",\"building\":\"17\",\"lat\":55.786308,\"lng\":37.507834,\"description\":null,\"raw\":\"Москва, Зорге, 17\",\"metro\":{\"station_name\":\"Полежаевская\",\"line_name\":\"Таганско-Краснопресненская\",\"station_id\":\"7.114\",\"line_id\":\"7\",\"lat\":55.777201,\"lng\":37.517895},\"metro_stations\":[{\"station_name\":\"Полежаевская\",\"line_name\":\"Таганско-Краснопресненская\",\"station_id\":\"7.114\",\"line_id\":\"7\",\"lat\":55.777201,\"lng\":37.517895}],\"id\":\"12756\"}\n",
-      "\"Аналитик данных (Дашборды, unit economy. E-commerce, Удаленно)\" ||| null ||| {\"from\":60000,\"to\":120000,\"curr ||| null\n",
-      "\"Аналитик данных / Бизнес-аналитик (удаленно)\" ||| null ||| null ||| null\n",
-      "\"Аналитик данных\" ||| null ||| null ||| {\"city\":\"Красногорск\",\"street\":\"бульвар Строителей\",\"building\":\"4\",\"lat\":55.814396,\"lng\":37.385861,\"description\":null,\"raw\":\"Красногорск, бульвар Строителей, 4\",\"metro\":{\"station_name\":\"Мякинино\",\"line_name\":\"Арбатско-Покровская\",\"station_id\":\"3.181\",\"line_id\":\"3\",\"lat\":55.823342,\"lng\":37.385214},\"metro_stations\":[{\"station_name\":\"Мякинино\",\"line_name\":\"Арбатско-Покровская\",\"station_id\":\"3.181\",\"line_id\":\"3\",\"lat\":55.823342,\"lng\":37.385214}],\"id\":\"646325\"}\n",
-      "\"Аналитик/Аналитик БД\" ||| null ||| {\"from\":null,\"to\":150000,\"curre ||| {\"city\":\"Москва\",\"street\":\"Олимпийский проспект\",\"building\":\"16с5\",\"lat\":55.783939,\"lng\":37.624462,\"description\":null,\"raw\":\"Москва, Олимпийский проспект, 16с5\",\"metro\":{\"station_name\":\"Проспект Мира\",\"line_name\":\"Кольцевая\",\"station_id\":\"5.119\",\"line_id\":\"5\",\"lat\":55.779584,\"lng\":37.633646},\"metro_stations\":[{\"station_name\":\"Проспект Мира\",\"line_name\":\"Кольцевая\",\"station_id\":\"5.119\",\"line_id\":\"5\",\"lat\":55.779584,\"lng\":37.633646},{\"station_name\":\"Проспект Мира\",\"line_name\":\"Калужско-Рижская\",\"station_id\":\"6.120\",\"line_id\":\"6\",\"lat\":55.781827,\"lng\":37.633199}],\"id\":\"5306351\"}\n"
+      "\"Аналитик данных / Data Analyst\"   |||                                    ||| {\"from\":160000,\"to\":200000,\"cur ||| null\n",
+      "\"Аналитик данных\"                  |||                                    ||| {\"from\":100000,\"to\":null,\"curre ||| {\"city\":\"Москва\",\"street\":\"Олонецкий проезд\",\"building\":\"4к2\",\"lat\":55.873163,\"lng\":37.66017,\"description\":null,\"raw\":\"Москва, Олонецкий проезд, 4к2\",\"metro\":{\"station_name\":\"Бабушкинская\",\"line_name\":\"Калужско-Рижская\",\"station_id\":\"6.13\",\"line_id\":\"6\",\"lat\":55.870641,\"lng\":37.664341},\"metro_stations\":[{\"station_name\":\"Бабушкинская\",\"line_name\":\"Калужско-Рижская\",\"station_id\":\"6.13\",\"line_id\":\"6\",\"lat\":55.870641,\"lng\":37.664341},{\"station_name\":\"Отрадное\",\"line_name\":\"Серпуховско-Тимирязевская\",\"station_id\":\"9.97\",\"line_id\":\"9\",\"lat\":55.864273,\"lng\":37.605066}],\"id\":\"25114\"}\n",
+      "\"Аналитик данных\"                  |||                                    ||| null ||| {\"city\":\"Москва\",\"street\":\"2-я Хуторская улица\",\"building\":\"38А\",\"lat\":55.805078,\"lng\":37.568021,\"description\":null,\"raw\":\"Москва, 2-я Хуторская улица, 38А\",\"metro\":{\"station_name\":\"Дмитровская\",\"line_name\":\"Серпуховско-Тимирязевская\",\"station_id\":\"9.35\",\"line_id\":\"9\",\"lat\":55.808056,\"lng\":37.581734},\"metro_stations\":[{\"station_name\":\"Дмитровская\",\"line_name\":\"Серпуховско-Тимирязевская\",\"station_id\":\"9.35\",\"line_id\":\"9\",\"lat\":55.808056,\"lng\":37.581734}],\"id\":\"2158863\"}\n",
+      "\"Аналитик\"                         |||                                    ||| {\"from\":80000,\"to\":120000,\"curr ||| null\n",
+      "\"Аналитик данных (SQL/Excel)\"      |||                                    ||| null ||| {\"city\":\"Москва\",\"street\":\"улица Двинцев\",\"building\":\"12к1А\",\"lat\":55.796223,\"lng\":37.59984,\"description\":null,\"raw\":\"Москва, улица Двинцев, 12к1А\",\"metro\":{\"station_name\":\"Марьина Роща\",\"line_name\":\"Люблинско-Дмитровская\",\"station_id\":\"10.185\",\"line_id\":\"10\",\"lat\":55.793723,\"lng\":37.61618},\"metro_stations\":[{\"station_name\":\"Марьина Роща\",\"line_name\":\"Люблинско-Дмитровская\",\"station_id\":\"10.185\",\"line_id\":\"10\",\"lat\":55.793723,\"lng\":37.61618},{\"station_name\":\"Савёловская\",\"line_name\":\"Серпуховско-Тимирязевская\",\"station_id\":\"9.128\",\"line_id\":\"9\",\"lat\":55.794054,\"lng\":37.587163}],\"id\":\"6542913\"}\n",
+      "\"Аналитик BI\"                      |||                                    ||| {\"from\":200000,\"to\":null,\"curre ||| {\"city\":\"Москва\",\"street\":\"переулок Огородная Слобода\",\"building\":\"5А\",\"lat\":55.765817,\"lng\":37.642222,\"description\":null,\"raw\":\"Москва, переулок Огородная Слобода, 5А\",\"metro\":{\"station_name\":\"Сретенский бульвар\",\"line_name\":\"Люблинско-Дмитровская\",\"station_id\":\"10.175\",\"line_id\":\"10\",\"lat\":55.766106,\"lng\":37.635688},\"metro_stations\":[{\"station_name\":\"Сретенский бульвар\",\"line_name\":\"Люблинско-Дмитровская\",\"station_id\":\"10.175\",\"line_id\":\"10\",\"lat\":55.766106,\"lng\":37.635688},{\"station_name\":\"Тургеневская\",\"line_name\":\"Калужско-Рижская\",\"station_id\":\"6.144\",\"line_id\":\"6\",\"lat\":55.765371,\"lng\":37.636732},{\"station_name\":\"Чистые пруды\",\"line_name\":\"Сокольническая\",\"station_id\":\"1.143\",\"line_id\":\"1\",\"lat\":55.76499,\"lng\":37.638293}],\"id\":\"11822530\"}\n",
+      "\"Аналитик данных / Data Analyst\"   ||| Сбер. Экспертам и руководителям    ||| null ||| null\n",
+      "\"Аналитик данных\"                  ||| Сбер. IT                           ||| null ||| {\"city\":\"Москва\",\"street\":\"Кутузовский проспект\",\"building\":\"32\",\"lat\":55.740421,\"lng\":37.532071,\"description\":null,\"raw\":\"Москва, Кутузовский проспект, 32\",\"metro\":{\"station_name\":\"Кутузовская\",\"line_name\":\"МЦК\",\"station_id\":\"95.536\",\"line_id\":\"95\",\"lat\":55.740833,\"lng\":37.533333},\"metro_stations\":[{\"station_name\":\"Кутузовская\",\"line_name\":\"МЦК\",\"station_id\":\"95.536\",\"line_id\":\"95\",\"lat\":55.740833,\"lng\":37.533333}],\"id\":\"823806\"}\n",
+      "\"Аналитик Данных\"                  |||                                    ||| null ||| {\"city\":\"Москва\",\"street\":\"Нагорный проезд\",\"building\":\"6\",\"lat\":55.688116,\"lng\":37.615677,\"description\":null,\"raw\":\"Москва, Нагорный проезд, 6\",\"metro\":null,\"metro_stations\":[],\"id\":\"399767\"}\n",
+      "\"Аналитик данных / Data Scientist\" |||                                    ||| {\"from\":150000,\"to\":null,\"curre ||| {\"city\":\"Москва\",\"street\":\"улица Арбат\",\"building\":\"10\",\"lat\":55.751381,\"lng\":37.596669,\"description\":null,\"raw\":\"Москва, улица Арбат, 10\",\"metro\":{\"station_name\":\"Арбатская\",\"line_name\":\"Арбатско-Покровская\",\"station_id\":\"3.5\",\"line_id\":\"3\",\"lat\":55.752312,\"lng\":37.60349},\"metro_stations\":[{\"station_name\":\"Арбатская\",\"line_name\":\"Арбатско-Покровская\",\"station_id\":\"3.5\",\"line_id\":\"3\",\"lat\":55.752312,\"lng\":37.60349}],\"id\":\"4652886\"}\n",
+      "\"Аналитик\"                         |||                                    ||| {\"from\":160000,\"to\":null,\"curre ||| null\n",
+      "\"Junior Analyst (Аналитик)\"        |||                                    ||| null ||| null\n",
+      "\"Аналитик данных\"                  ||| билайн: ИТ, Data, Digital          ||| null ||| null\n",
+      "\"Аналитик данных\"                  ||| X5 GROUP, Media                    ||| null ||| null\n",
+      "\"Аналитик\"                         |||                                    ||| null ||| null\n",
+      "\"Аналитик данных\"                  ||| билайн: ИТ, Data, Digital          ||| null ||| null\n",
+      "\"Аналитик данных SQL (офис)\"       |||                                    ||| {\"from\":120000,\"to\":150000,\"cur ||| null\n",
+      "\"Аналитик\"                         |||                                    ||| {\"from\":50000,\"to\":null,\"curren ||| null\n",
+      "\"Аналитик СХ-данных\"               ||| ANCOR                              ||| {\"from\":null,\"to\":190000,\"curre ||| null\n"
      ]
     }
    ],
    "source": [
+    "change_column ()\n",
+    "change_width()\n",
+    "\n",
     "for i in range(pp-1):\n",
-    "    print(table_vakancy[i]['name'][7:],\"|||\", table_vakancy[i]['department'][13:],\"|||\", \n",
+    "    print(table_vakancy[i]['name'],\"|||\", table_vakancy[i]['department'],\"|||\", \n",
     "      table_vakancy[i]['salary'][9:40],\"|||\",table_vakancy[i]['address'][10:])"
    ]
   }
